syntax = "proto3";

option csharp_namespace = "Correo";

package greet;

// The greeting service definition.
service Correo {
  // Sends a greeting
  rpc EnviarCorreo(EnviarCorreoRequest) returns (EnviarCorreoResponse);
}

// The request message containing the user's name.
message EnviarCorreoRequest {
  string destinatario = 1;
  string mensaje = 2;
}

// The response message containing the greetings.
message EnviarCorreoResponse {
  string resultado = 1;
}

